# fpl_predictor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  settings.yml
.github/workflows/: build-and-test.yml  poetry-pytest.yml  pre-commit-autoupdate.yml
fpl_predictor/: linear_optimisation.py  player_gw_score_prediction.py  player_stats.py  settings.py  squad_selection.py  utils.py
fpl_predictor/model_training/: load_23_24_season_data.py  load_data.py  position_encoder.py  xgboost.py
fpl_predictor/scripts/: select_first_squad.py  select_gameweek_squad.py
fpl_predictor/squad_selection/: __init__.py  linear_optimisation.py  player_availability.py  player_gw_score_prediction.py  squad_selection.py
scratch/: aggregate_player_scores.py  interrogate_model.py  linear_optimisation.py
squads/: gw_1_squad.csv  gw_2_squad.csv  gw_3_squad.csv  gw_4_squad.csv  gw_5_squad.csv  gw_6_squad.csv  points.csv
src/fpl_predictor/: player_stats.py
tests/: conftest.py  test_linear_optimisation.py  test_player_stats.py  test_utils.py
tests/fixtures/: gw_fixtures.json  gw_stats.parquet
tests/model_training/: test_load_23_24_season_data.py  test_xgboost.py
tests/sample_data/: player_data.csv  sample_squad.csv
tests/squad_selection/: test_linear_optimisation.py  test_player_availability.py  test_player_gw_score_prediction.py  test_squad_selection.py
