[tool.autoflake]
expand-star-imports = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
files = ["."]
ignore_missing_imports = true

[tool.poetry]
authors = ["Ben Jeffrey <bjeffrey92@hotmail.com>"]
description = "FPL Predictor"
name = "fpl_predictor"
packages = [
  {include = "fpl_predictor"}
]
version = "0.0.0"

[tool.poetry.dependencies]
jmespath = "^1.0.1"
polars = "^0.20.16"
python = "3.11.*"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
