[tool.autoflake]
expand-star-imports = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
files = ["."]
ignore_missing_imports = true

[tool.poetry]
authors = ["Ben Jeffrey <bjeffrey92@hotmail.com>"]
description = "FPL Predictor"
name = "fpl_predictor"
packages = [
  {include = "fpl_predictor"}
]
version = "0.0.0"

[tool.poetry.dependencies]
bayesian-optimization = "^1.4.3"
boto3 = "^1.1.1"
fsspec = "^2022.1.0"
jmespath = "^1.0.1"
polars = "^0.20.30"
python = "3.11.*"
python-decouple = "^3.8"
requests = "^2.32.2"
s3fs = "^2022.1.0"
scikit-learn = "^1.5.0"
scipy = "^1.13.0"
xgboost = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
